Fix look up subscribe-cta button on mobile safari

--- a/css/main.sass
+++ b/css/main.sass
@@ -488,6 +488,7 @@ body
     font-weight: bold
     padding: 0 12px
     border-radius: 2px
+    -webkit-appearance: none
     &:hover
       background-color: #16548E
       cursor: pointer
